# ai-proctor-engine

./: .gitignore  CMakeLists.txt  build_and_run.ps1  build_and_run_mac.sh  build_and_run_windows.bat
include/: event_emitter.h  face_detector.h  proctor_engine.h
src/: event_emitter.cpp  face_detector.cpp  main.cpp  proctor_engine.cpp  screen_monitor.cpp  utils.cpp
